--- a/src/main/webapp/WEB-INF/views/showQuery.html
+++ b/src/main/webapp/WEB-INF/views/showQuery.html
@@ -24,8 +24,10 @@
 		</div>
 		<script type="text/javascript">
 			$(document).delegate(".dbQueryViewLOb", "click", function() {
-				
-				var tag = $("#eidtParameterContainer").html("确认要删除这个参数吗？");
+			});
+			function showDBLobSql(command)
+			{
+				var tag = $("#dbqueryDialogContainer").html("sql：<textarea rows='14' cols='60' name='content'></textarea>");
 				tag.dialog({
 				      modal: true, title: '参数删除', zIndex: 10000, autoOpen: true,
 				      width: 'auto', resizable: true,
@@ -45,9 +47,8 @@
 				      ]
 				      
 				});
-								
-			});
-		
+				
+			}
 		</script>
 	</body>
 </html>
