准备做文件上传

--- a/src/main/webapp/WEB-INF/views/showQuery.html
+++ b/src/main/webapp/WEB-INF/views/showQuery.html
@@ -12,7 +12,7 @@
 	</script>
 	<body>
 		<div class="divBlock">
-			<form id="queryForm" action="" method="POST">
+			<form id="queryForm" action="" method="POST" ${formEnctype!""}>
 				${queryHtml}
 			</form>
 		</div>
